deployment-test.yaml
apiVersion: v1
kind: List
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: sybyl-services
      app.kubernetes.io/component: sybyl-services
      app.kubernetes.io/instance: sybyl-services
    name: sybyl-services
  spec:
    replicas: 3
    revisionHistoryLimit: 10
    selector:
      deploymentconfig: sybyl-services
    template:
      metadata:
        labels:
          deploymentconfig: sybyl-services
      spec:
        containers:
        - image: sybyl-services
          imagePullPolicy: Always
          name: sybyl-services
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - sybyl-services
        from:
          kind: ImageStreamTag
          name: sybyl-services:test
      type: ImageChange
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    labels:
      app: sybyl-services
      app.kubernetes.io/component: sybyl-services
      app.kubernetes.io/instance: sybyl-services
    name: sybyl-services
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: sybyl-services
      app.kubernetes.io/component: sybyl-services
      app.kubernetes.io/instance: sybyl-services
    name: sybyl-services
  spec:
    port:
      targetPort: 8080-tcp
    tls:
      termination: edge
    to:
      kind: Service
      name: sybyl-services
      weight: 100
    wildcardPolicy: None
